# account-manager

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: main.py
src/config/: config.py
src/database/: __init__.py  db.py
src/dto/: user.py
src/entities/: base.py  user.py
src/migrations/: env.py
src/migrations/versions/: cd1205c8d06d_user.py
src/repositories/: base.py  user.py
src/routers/: __init__.py  router.py
src/routers/v1/: __init__.py  auth.py
src/security/: hash.py  jwt.py
src/services/: user.py
